exports[`analyzeWithRules · crypto_baseline · edge 1`] = `
{
  "recommendation": "SKIP",
  "score": 57,
  "risk": "HIGH",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback)",
  "direction": "LONG",
  "matched_rules": [
    "RSI neutral (NaN)",
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [],
  "unknown_rules": [
    "EMA 50/200 (keine Daten)",
    "Trend-Label (keine Daten)",
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": 0,
    "trend": 0,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "SCHWACH",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · crypto_baseline · reject 1`] = `
{
  "recommendation": "SKIP",
  "score": 38,
  "risk": "HIGH",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback) · EMA bearish · Trend: BEARISH · Bias: SHORT",
  "direction": "LONG",
  "matched_rules": [
    "RSI niedrig (38) – passt zu Setup A LONG",
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [
    "EMA bearish – Trend gegen LONG, kein Bias",
    "Trend BEARISH – gegen LONG",
    "Wave Bias SHORT – gegen LONG"
  ],
  "unknown_rules": [
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 10,
    "ema": -15,
    "trend": -10,
    "wave_bias": -4,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "SKIP",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · crypto_baseline · trade 1`] = `
{
  "recommendation": "LONG",
  "score": 100,
  "risk": "LOW",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback) · EMA bullish · Trend: BULLISH · Bias: LONG",
  "direction": "LONG",
  "matched_rules": [
    "RSI niedrig (38) – passt zu Setup A LONG",
    "EMA bullish (EMA50>EMA200, Dist 1.0%) – LONG",
    "Trend BULLISH – passt zu LONG",
    "Wave Bias LONG – passt zu LONG",
    "Timeframe 5min – Entry-Timeframe v2.0",
    "Konfidenz 80% – hoch",
    "Preis nah an Support – günstig für LONG"
  ],
  "failed_rules": [],
  "unknown_rules": [],
  "score_breakdown": {
    "rsi": 10,
    "ema": 11,
    "trend": 10,
    "wave_bias": 8,
    "timeframe": 7,
    "confidence": 7,
    "support_resistance": 10
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "PREMIUM",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · crypto_orderflow_breakout · edge 1`] = `
{
  "recommendation": "SKIP",
  "score": 37,
  "risk": "HIGH",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback)",
  "direction": "LONG",
  "matched_rules": [
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [],
  "unknown_rules": [
    "RSI (keine Daten)",
    "EMA 50/200 (keine Daten)",
    "Trend-Label (keine Daten)",
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": 0,
    "trend": 0,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "SKIP",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · crypto_orderflow_breakout · reject 1`] = `
{
  "recommendation": "SKIP",
  "score": 37,
  "risk": "HIGH",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback)",
  "direction": "LONG",
  "matched_rules": [
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [],
  "unknown_rules": [
    "RSI (keine Daten)",
    "EMA 50/200 (keine Daten)",
    "Trend-Label (keine Daten)",
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": 0,
    "trend": 0,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "SKIP",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · crypto_orderflow_breakout · trade 1`] = `
{
  "recommendation": "LONG",
  "score": 78,
  "risk": "MEDIUM",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback) · EMA bullish · Trend: BULLISH",
  "direction": "LONG",
  "matched_rules": [
    "RSI neutral (55)",
    "EMA bullish (EMA50>EMA200, Dist 1.0%) – LONG",
    "Trend BULLISH – passt zu LONG",
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [],
  "unknown_rules": [
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": 11,
    "trend": 10,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "GUT",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · crypto_sr_volume · edge 1`] = `
{
  "recommendation": "SKIP",
  "score": 37,
  "risk": "HIGH",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback)",
  "direction": "LONG",
  "matched_rules": [
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [],
  "unknown_rules": [
    "RSI (keine Daten)",
    "EMA 50/200 (keine Daten)",
    "Trend-Label (keine Daten)",
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": 0,
    "trend": 0,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "SKIP",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · crypto_sr_volume · reject 1`] = `
{
  "recommendation": "SKIP",
  "score": 32,
  "risk": "HIGH",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback) · EMA bearish · Trend: BEARISH",
  "direction": "LONG",
  "matched_rules": [
    "RSI neutral (60)",
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [
    "EMA bearish – Trend gegen LONG, kein Bias",
    "Trend BEARISH – gegen LONG"
  ],
  "unknown_rules": [
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": -15,
    "trend": -10,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "SKIP",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · crypto_sr_volume · trade 1`] = `
{
  "recommendation": "LONG",
  "score": 88,
  "risk": "LOW",
  "entry": 100,
  "tp": 101.5,
  "sl": 99,
  "tp2": 103,
  "reason": "Setup A (Pullback) · EMA bullish · Trend: BULLISH",
  "direction": "LONG",
  "matched_rules": [
    "RSI niedrig (38) – passt zu Setup A LONG",
    "EMA bullish (EMA50>EMA200, Dist 1.0%) – LONG",
    "Trend BULLISH – passt zu LONG",
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [],
  "unknown_rules": [
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 10,
    "ema": 11,
    "trend": 10,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 1.5,
  "planned_risk_pct": 1,
  "signal_quality": "GUT",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · forex_sr_fib_rsi · edge 1`] = `
{
  "recommendation": "SKIP",
  "score": 37,
  "risk": "HIGH",
  "entry": 1.08,
  "tp": 1.0848600000000002,
  "sl": 1.0767600000000002,
  "tp2": 1.08972,
  "reason": "Setup A (Pullback)",
  "direction": "LONG",
  "matched_rules": [
    "Timeframe 5min – Entry-Timeframe v2.0"
  ],
  "failed_rules": [],
  "unknown_rules": [
    "RSI (keine Daten)",
    "EMA 50/200 (keine Daten)",
    "Trend-Label (keine Daten)",
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)",
    "Support/Resistance (keine Zonen)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": 0,
    "trend": 0,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 0
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 0.45,
  "planned_risk_pct": 0.3,
  "signal_quality": "SKIP",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · forex_sr_fib_rsi · reject 1`] = `
{
  "recommendation": "SKIP",
  "score": 65,
  "risk": "HIGH",
  "entry": 1.08,
  "tp": 1.0848600000000002,
  "sl": 1.0767600000000002,
  "tp2": 1.08972,
  "reason": "Setup A (Pullback) · EMA bullish · Trend: BULLISH",
  "direction": "LONG",
  "matched_rules": [
    "RSI neutral (55)",
    "Trend BULLISH – passt zu LONG",
    "Timeframe 5min – Entry-Timeframe v2.0",
    "Preis nah an Support – günstig für LONG"
  ],
  "failed_rules": [
    "Preis zu nah an EMA 200 (0.19%) – Ausschluss v2.0"
  ],
  "unknown_rules": [
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": -12,
    "trend": 10,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 10
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 0.45,
  "planned_risk_pct": 0.3,
  "signal_quality": "OKAY",
  "setup_type": "SETUP_A"
}
`;

exports[`analyzeWithRules · forex_sr_fib_rsi · trade 1`] = `
{
  "recommendation": "SKIP",
  "score": 65,
  "risk": "HIGH",
  "entry": 1.08,
  "tp": 1.0848600000000002,
  "sl": 1.0767600000000002,
  "tp2": 1.08972,
  "reason": "Setup A (Pullback) · EMA bullish · Trend: BULLISH",
  "direction": "LONG",
  "matched_rules": [
    "RSI neutral (55)",
    "Trend BULLISH – passt zu LONG",
    "Timeframe 5min – Entry-Timeframe v2.0",
    "Preis nah an Support – günstig für LONG"
  ],
  "failed_rules": [
    "Preis zu nah an EMA 200 (0.19%) – Ausschluss v2.0"
  ],
  "unknown_rules": [
    "Wave Bias (keine Daten)",
    "Konfidenz (keine Daten)"
  ],
  "score_breakdown": {
    "rsi": 0,
    "ema": -12,
    "trend": 10,
    "wave_bias": 0,
    "timeframe": 7,
    "confidence": 0,
    "support_resistance": 10
  },
  "risk_reward": 1.5,
  "planned_profit_pct": 0.45,
  "planned_risk_pct": 0.3,
  "signal_quality": "OKAY",
  "setup_type": "SETUP_A"
}
`;
